# dotsync

./: .gitignore  .test-status.json  AGENTS.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  VISION.md  devenv.nix
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: CNAME  SKILL.md  index.html  version.json
docs/reviews/: code-quality.json
scripts/: check_main_version_bump.py
src/: bootstrap.rs  cascade.rs  commit.rs  config.rs  error.rs  inspect.rs  lib.rs  machine.rs  main.rs  render.rs  repo.rs  scope_graph.rs  scope_lifecycle.rs  status.rs  sync.rs
tests/: help_examples.rs  help_text.rs  user_flows.rs  version_json.rs
tests/agent-scenarios/: README.md  setup.sh
