[package]
name = "dotsync"
version = "0.1.0"
edition = "2021"
description = "Agent-first dotfile sync with scope branches and merge cascades"
license = "MIT"
repository = "https://github.com/maxeonyx/dotsync"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
gix = "0.80"
jj-lib = "0.39"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.18"
